# python-best-practices-cookiecutter

./: README.md  cookiecutter.json  setup.cfg
{{cookiecutter.repo_name}}/: Pipfile  README.md  setup.cfg
